[gd_scene load_steps=9 format=3 uid="uid://cerkyetgyarka"]

[ext_resource type="PackedScene" uid="uid://cxh1r8f8kp3nq" path="res://scenes/world.tscn" id="1_4pnkd"]
[ext_resource type="PackedScene" uid="uid://b8dq8ncfnp36v" path="res://scenes/player.tscn" id="2_5k3gg"]
[ext_resource type="PackedScene" uid="uid://b8hfr5l6kj2cx" path="res://scenes/game_manager.tscn" id="3_7h9kd"]
[ext_resource type="PackedScene" path="res://scenes/minimap.tscn" id="4_minimap"]
[ext_resource type="PackedScene" path="res://scenes/house.tscn" id="5_house"]
[ext_resource type="Script" uid="uid://dtxhuep4mdymv" path="res://scripts/info_manager.gd" id="6_info"]
[ext_resource type="Script" uid="uid://tcj575eeou4u" path="res://scripts/main.gd" id="7_main"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="8_pause"]

[node name="Main" type="Node2D"]
script = ExtResource("7_main")

[node name="World" parent="." instance=ExtResource("1_4pnkd")]

[node name="Player" parent="." instance=ExtResource("2_5k3gg")]
position = Vector2(100, 0)

[node name="House" parent="." instance=ExtResource("5_house")]

[node name="GameManager" parent="." instance=ExtResource("3_7h9kd")]

[node name="InfoManager" type="Node" parent="."]
script = ExtResource("6_info")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Minimap" parent="UI" instance=ExtResource("4_minimap")]
layout_mode = 3
anchors_preset = 1
offset_left = -230.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="InfoPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 190.0
offset_right = -10.0
offset_bottom = 390.0
grow_horizontal = 0

[node name="InfoBackground" type="ColorRect" parent="UI/InfoPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="InfoBorder" type="ColorRect" parent="UI/InfoPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.7, 0.7, 0.9, 1)

[node name="InfoContent" type="ColorRect" parent="UI/InfoPanel/InfoBorder"]
layout_mode = 0
anchor_left = 0.03
anchor_top = 0.03
anchor_right = 0.97
anchor_bottom = 0.97
mouse_filter = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="HeaderBar" type="ColorRect" parent="UI/InfoPanel/InfoBorder/InfoContent"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.15
color = Color(0.2, 0.2, 0.3, 1)

[node name="HeaderTitle" type="Label" parent="UI/InfoPanel/InfoBorder/InfoContent/HeaderBar"]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
text = "INFORMATION"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 10

[node name="InfoText" type="VBoxContainer" parent="UI/InfoPanel/InfoBorder/InfoContent"]
layout_mode = 0
anchor_left = 0.08
anchor_top = 0.2
anchor_right = 0.92
anchor_bottom = 0.92
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="UI/InfoPanel/InfoBorder/InfoContent/InfoText"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="Separator1" type="HSeparator" parent="UI/InfoPanel/InfoBorder/InfoContent/InfoText"]
layout_mode = 2
theme_override_colors/separator = Color(0.5, 0.5, 0.6, 0.5)

[node name="Description" type="Label" parent="UI/InfoPanel/InfoBorder/InfoContent/InfoText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 11
autowrap_mode = 3

[node name="Separator2" type="HSeparator" parent="UI/InfoPanel/InfoBorder/InfoContent/InfoText"]
layout_mode = 2
theme_override_colors/separator = Color(0.5, 0.5, 0.6, 0.5)

[node name="Distance" type="Label" parent="UI/InfoPanel/InfoBorder/InfoContent/InfoText"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 10

[node name="GameHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 400.0
grow_vertical = 0

[node name="HUDBackground" type="ColorRect" parent="UI/GameHUD"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="HUDContent" type="HBoxContainer" parent="UI/GameHUD"]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.85
theme_override_constants/separation = 20

[node name="StatusSection" type="VBoxContainer" parent="UI/GameHUD/HUDContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="UI/GameHUD/HUDContent/StatusSection"]
layout_mode = 2
text = "Health: 100/100"
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 11

[node name="EnergyLabel" type="Label" parent="UI/GameHUD/HUDContent/StatusSection"]
layout_mode = 2
text = "Energy: 100/100"
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 11

[node name="ResourcesSection" type="VBoxContainer" parent="UI/GameHUD/HUDContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WoodLabel" type="Label" parent="UI/GameHUD/HUDContent/ResourcesSection"]
layout_mode = 2
text = "Wood: 0"
theme_override_colors/font_color = Color(0.8, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 11

[node name="StoneLabel" type="Label" parent="UI/GameHUD/HUDContent/ResourcesSection"]
layout_mode = 2
text = "Stone: 0"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11

[node name="ActionsSection" type="VBoxContainer" parent="UI/GameHUD/HUDContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionHint" type="Label" parent="UI/GameHUD/HUDContent/ActionsSection"]
layout_mode = 2
text = "Press 'I' for Inventory"
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
theme_override_font_sizes/font_size = 10

[node name="PauseMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
process_mode = 2
visible = false
script = ExtResource("8_pause")

[node name="Overlay" type="ColorRect" parent="UI/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PausePanel" type="ColorRect" parent="UI/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
color = Color(0.2, 0.2, 0.35, 0.95)

[node name="PauseBorder" type="ColorRect" parent="UI/PauseMenu/PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.7, 0.7, 0.9, 1)
mouse_filter = 2

[node name="PauseContent" type="ColorRect" parent="UI/PauseMenu/PausePanel/PauseBorder"]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
color = Color(0.15, 0.15, 0.25, 1)
mouse_filter = 2

[node name="MenuContainer" type="VBoxContainer" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_constants/separation = 15

[node name="PauseTitle" type="Label" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 40)
text = "GAME PAUSED"
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚ñ∂ RESUME"
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="OptionsButton" type="Button" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚öô OPTIONS"
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14

[node name="MainMenuButton" type="Button" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "üè† MAIN MENU"
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14

[node name="QuitButton" type="Button" parent="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer"]
custom_minimum_size = Vector2(250, 35)
text = "‚úï QUIT GAME"
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14

[connection signal="pressed" from="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer/ResumeButton" to="UI/PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer/OptionsButton" to="UI/PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer/MainMenuButton" to="UI/PauseMenu" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PausePanel/PauseBorder/PauseContent/MenuContainer/QuitButton" to="UI/PauseMenu" method="_on_quit_pressed"]